     Thanks to juba for noticing it here on SO:
	 http://stackoverflow.com/questions/19094771/replace-values-in-each-column-based-on-conditions-according-to-groups-by-rows
  
  o  Fixed another case where function expressions were not constructed properly in `j`, while fixing #5007. 
     `DT[, lapply(.SD, function(x) my_const), by=x]` now works as expected instead of ending up in an error.
  
NOTES

  o  If fread ignores colClasses, the message is upgraded to warning instead of just a line in verbose=TRUE mode.
  
  o  ?last has been improved and if xts is needed but not installed the error message is more helpful, #2728.
     Thanks to Sam Steingold for reporting.
     
  o  ?between corrected. It returns a logical not integer vector, #2671. Thanks to Michael Nelson for reporting.
  
  o  .SD,.N,.I,.GRP and .BY are now exported (as NULL). So that NOTEs aren't produced for them by R CMD check or
     codetools::checkUsage via compiler. utils::globalVariables() was considered, but exporting chosen.
     Thanks to Sam Steingold for raising, #2723.
     
  o  When DT is empty, DT[,col:=""] is no longer a warning. The warning was :
        Supplied 1 items to be assigned to 0 items of column (1 unused)
        
  o  Thanks to Simon Biggs for reporting a bug in fread'ing logicals, caught in beta testing. Test added.


        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.10   **
        **                                          **
        **          On CRAN : 03 Sep 2013           **
        **                                          **
        **********************************************
        
NEW FEATURES

  o  fread :
     * If some column names are blank they are now given default names rather than causing
       the header row to be read as a data row. Thanks to Simon Judes for suggesting.
